Bug fixes 1. Hide remove button for default profile on dashboard. 2. Make default button in blue color when a single profile is selected. 3. Style changes on storage config pagge to align with design. 3. Added view button above profile table when a single profile is selected. 4. Coming soon popover for WIP links.

--- a/app/app.css
+++ b/app/app.css
@@ -28,7 +28,7 @@
 	padding: 0;
 }
 
-html, body {
+html,body {
 	height: 100%;
 }
 
@@ -85,8 +85,7 @@ footer {
 }
 
 .newStorageDiv {
-	float: left;
-	margin-left: 10px;
+	padding-top: 10px;
 }
 
 .DashboardSrchDiv {
@@ -203,6 +202,7 @@ table.noborder tbody tr td {
 
 .propertyLabel {
 	font-weight: bold;
+	text-align: left;
 }
 
 table tbody tr td.verticalmid {
